--- a/Queens/css/style.css
+++ b/Queens/css/style.css
@@ -74,5 +74,10 @@
   height: 1.5rem;
   min-height: 1.5rem;
 }
+#solutions > table td img {
+  display: block;
+  width: 1.5rem;
+  height: 1.5rem;
+}
 
 /*# sourceMappingURL=style.css.map */
